# LibrePoll

./: .dir-locals.el  .gitignore  LICENSE  Makefile.am  README.md  configure.ac  guile.am  guix  librepoll  librepoll.in  librepoll.json  pre-inst-env.in  run.in
assets/blue/: main.css
assets/default/: main.css
assets/none/: main.css
assets/purple/: main.css
doc/: createdb.sql  guix.service  system_example.scm
librepoll/: chart.scm  create-db.scm  error.scm  options.scm  render.scm  sql-request.scm  sql.scm  tools.scm
